<resources>
    <string name="gp_remark">备注</string>
    <string name="cannot_see_copyvalue">看不清</string>
    <string name="app_name">变电运维智能移动作业平台</string>
    <string name="app_tips">五通一措版</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weather">当前天气</string>
    <string name="tracker_person_format_str">巡检人员：%1$s</string>
    <string name="about_us_str">关于我们</string>
    <string name="particular_inspection_str">特殊\n巡检</string>
    <string name="regular_maintenance_str">定期\n维护</string>
    <string name="routine_inspection_str">日常\n巡检</string>
    <string name="comprehensive_inspection_str">全面\n巡检</string>
    <string name="regular_replacement_str">定期切\n换试验</string>
    <string name="rules_str">规程制度</string>
    <string name="special_inspection_str">专项\n巡检</string>
    <string name="inspection_train_str">巡检培训</string>
    <string name="new_equipment_inspection_str">新设备\n投运巡检</string>
    <string name="acceptance_equipment_str">设备\n验收</string>
    <string name="inspection_task_remind_str">巡检任务提醒</string>
    <string name="inspection_ready_str">巡检前准备</string>
    <string name="exist_defect_str">现存缺陷</string>
    <string name="inspection_standard_str">巡视标准</string>
    <string name="power_station_str">变电站</string>
    <string name="battery_infor_str">蓄电池组参数</string>
    <string name="add_new_defect_str">新增缺陷</string>
    <string name="add_new_defect_define_str">新增缺陷定义</string>
    <string name="revoke_str">撤\t销</string>
    <string name="test_step_str">试验步骤</string>
    <string name="comprehensive_inspection_no_symbol_str">全面巡检</string>
    <string name="focus_attention_str">重点关注</string>
    <string name="record_defect_str">记录缺陷</string>
    <string name="reference_photo_str">参考图片</string>
    <string name="reference_standard_str">参考标准</string>
    <string name="deal_method_str">处理方法</string>
    <string name="change_pic_str">更换照片</string>
    <string name="do_list_str">待办事项：共0项\n已办事项：共0项</string>
    <string name="inspection_start_time_str">巡检开始时间：</string>
    <string name="inspection_end_time_str">巡检结束时间：</string>
    <string name="inspection_temperature_str">巡检时温度：</string>
    <string name="inspection_humidity_str">巡检时湿度：</string>
    <string name="inspection_weather_str">巡检时天气：</string>
    <string name="work_temperature_jcstr">温度:</string>
    <string name="work_humidity_jcstr">湿度:</string>
    <string name="work_weather_jcstr">天气：</string>
    <string name="work_start_time_str">检测开始时间：</string>
    <string name="work_end_time_str">检测结束时间：</string>
    <string name="work_persons_str">检测人员：</string>
    <string name="work_check_type_str">检测类别：</string>
    <string name="work_department_str">工作单位：</string>
    <string name="work_group_str">工作班组：</string>
    <string name="work_result_str">检测结果</string>
    <string name="work_finish_status_str">检测完成情况：未完成</string>
    <string name="work_finish_check_str">检查情况：</string>
    <string name="work_continue_str">继续检测</string>
    <string name="work_status_format_str">巡检完成情况：%1$s</string>
    <string name="voltage_deparment">%1$sV</string>
    <string name="electricity_deparment">%1$sA</string>
    <string name="battery_name2_str">蓄电池组名称</string>
    <string name="battery_name_str">蓄电池组名称：</string>
    <string name="battery_test_type_str">测试分类：</string>
    <string name="inspection_result_str">巡检结果</string>
    <string name="inspection_finish_status_str">巡检完成情况：未完成</string>
    <string name="inspection_finish_check_str">检查情况：</string>
    <string name="infrared_count_format_str">测温点数量：%1$s个</string>
    <string name="discover_defect_count_format_str">发现的缺陷数量：%1$s个</string>
    <string name="protect_clamp_count_format_str">保护压板核对数量：%1$s个</string>
    <string name="constant_value_format_str">定值核对数量：%1$s个</string>
    <string name="general_defect_str">一般缺陷</string>
    <string name="serious_defect_str">严重缺陷</string>
    <string name="crisis_defect_str">危急缺陷</string>
    <string name="general_str">一般</string>
    <string name="serious_str">严重</string>
    <string name="crisis_str">危急</string>
    <string name="all_defect_str">巡检发现的缺陷</string>
    <string name="remain_prolems_str">遗留问题</string>
    <string name="new_defect_count_str">发现的缺陷</string>
    <string name="clear_count_str">消除的缺陷</string>
    <string name="track_count_str">跟踪的缺陷</string>
    <string name="all_defect_powerstation_str">本变电站目前现存</string>
    <string name="new_product_inspection_times_str">设备新投巡检次数</string>
    <string name="inspection_picture_str">巡检过程图片</string>
    <string name="playback_str">巡检轨迹回放</string>
    <string name="defect_control_str">缺陷管控</string>
    <string name="current_device_exist_defect_str">当前设备存在缺陷</string>
    <string name="add_defect_str">增加缺陷</string>
    <string name="test_temperature_record_str">测温记录</string>
    <string name="find_question_str">发现问题</string>
    <string name="eliminate_defect_str">消除缺陷</string>
    <string name="confirm_str">确\t认</string>
    <string name="finish_temperature_str">完成测温</string>
    <string name="add_str">新\t增</string>
    <string name="report_to_leader_str">上\t报</string>
    <string name="dialog_cancel_text_str">取\t消</string>
    <string name="finish_check_str">完成核对</string>
    <string name="take_picture_str">拍照</string>
    <string name="please_select_device_part_str">请选择设备部件</string>
    <string name="please_select_spacing_str">请选择间隔</string>
    <string name="please_select_device_type_str">请选择设备类型</string>
    <string name="please_input_device_name_str">请输入设备名称</string>
    <string name="please_select_inspection_date_str">请选择巡检时间</string>
    <string name="please_select_after_today_date_str">请选择今天及以后的时间</string>
    <string name="please_select_power_station_str">请选择变电站</string>
    <string name="please_select_ylcs_str">请选择检测类别</string>
    <string name="please_select_inspection_type_str">请选择巡检类型</string>
    <string name="please_select_defect_reason_str">请选择缺陷原因</string>
    <string name="please_input_defect_content_str">请输入缺陷内容</string>
    <string name="next_set_new_product_inspection_date_str">下一步将选择新投设备并设定巡检次数</string>
    <string name="track_history_str">缺陷历史</string>
    <string name="track_defect_str">跟踪缺陷</string>
    <string name="defect_eliminate_date_str">请选择缺陷消除日期</string>
    <string name="eliminate_photo_str">请拍摄消缺拍照</string>
    <string name="eliminate_work_tickets_str">请拍摄消除缺陷的工作票</string>
    <string name="eliminate_record_str">请拍摄消缺记录</string>
    <string name="please_input_charge_person_str">请输入消缺工作负责人</string>
    <string name="custom_defect_content_str">自定义缺陷内容</string>
    <string name="defect_content_str">缺陷内容</string>
    <string name="defect_reason_str">缺陷原因</string>
    <string name="select_inspection_type_str">选择巡检类型</string>
    <string name="add_inspection_task_str">追加巡检任务</string>
    <string name="noperson_guards_str">无人看守</string>
    <string name="has_person_guards_str">有人(少人)看守</string>
    <string name="please_input_value_str">请输入</string>
    <string name="please_input_report_value_str">请输入上报的内容</string>
    <string name="report_generating_str">报告生成中\u2026</string>
    <string name="finish_str">完\t成</string>
    <string name="select_leader_str">选择上报人</string>
    <string name="back_str">返\t回</string>
    <string name="clear_all_mark_str">清除标记</string>
    <string name="add_mark_str">添加标记</string>
    <string name="report_str">报</string>
    <string name="track_str">跟</string>
    <string name="eliminate_str">消</string>
    <string name="picture_function_str">图片选项</string>
    <string name="task_function_title_str">任务选项</string>
    <string name="continue_inspection_str">继续巡检</string>
    <string name="see_inspection_details_str">查看详情</string>
    <string name="finish_inspection_str">完成巡检</string>
    <string name="wind_inspection_str">大风特巡</string>
    <string name="device_title_str">设备</string>
    <string name="result_str">电池列表</string>
    <string name="finish_battery_tria_str">完成试验</string>
    <string name="defect_standard_str">缺陷标准</string>
    <string name="search_str">搜索</string>
    <string name="please_input_search_content_str">请输入搜索内容</string>
    <string name="electric_current_str">充电电流(安培)</string>
    <string name="battery_voltage_str">电池电压(V)</string>
    <string name="measure_temperature_str">测量温度(°C)</string>
    <string name="load_current_str">负荷电流(A)</string>
    <string name="rate_current_str">额定电流(A)</string>
    <string name="control_voltage_str">控制母线电压(V)</string>
    <string name="hours_times_str">(小时/次)：</string>
    <string name="copy_all_value_str">集中抄录</string>
    <string name="test_category_str">测试分类</string>
    <string name="battery_count_str">蓄电池节数:</string>
    <string name="protect_clamp_count_str">保护压板核对数量</string>
    <string name="constant_value_count_str">定值核对数量</string>
    <string name="battery_test_title_str">蓄电池测试</string>
    <string name="battery_test_step_title_str">试验步骤</string>
    <string name="spot_checks_str">抽查</string>
    <string name="the_census_str">普查</string>
    <string name="battery_108_str">108</string>
    <string name="battery_20_str">20</string>
    <string name="generate_result_str">生成结果项</string>
    <string name="please_input_voltage_str">请输入电压</string>
    <string name="please_copy_temperature_str">请抄录当前温度</string>
    <string name="please_input_humidity_str">请抄录当前湿度</string>
    <string name="please_input_resistance_str">请输入电阻</string>
    <string name="before_inspection_ready_str">开始巡检前准备工作</string>
    <string name="found_defect_str">发现缺陷，是否记录？</string>
    <string name="copy_battery_value">抄录的数据</string>
    <string name="choose_standard_source">请选择引用标准的设备</string>
    <string name="battery_voltage_format_str">第%1$s组蓄电池电压：%2$sV</string>
    <string name="battery_resistance_format_str">内阻：%1$smΩ</string>
    <string name="dialog_tips_finish_str">抄录完成情况:%1$s</string>
    <string name="add_task_tips_format_str">Tips:%1$s 每月 %2$s 2次</string>
    <string name="manufacturer_format_str">生产厂家:%1$s</string>
    <string name="device_model_format_str">产品型号:%1$s</string>
    <string name="product_date_format_str">投产日期:%1$s</string>
    <string name="device_number_format_str">设备编号:%1$s</string>
    <string name="speak_content_format_str">开始%1$s作业</string>
    <string name="report_title_format_str">%1$s报告</string>
    <string name="question_description_format_str">%1$s  %2$s  %3$s发热,温度%4$s°C,%5$s 根据《带电设备红外诊断技术应用导则》,对缺陷定义“%6$s”</string>
    <string name="question_description_format2_str">[问题%1$s]%2$s,判定此缺陷为%3$s</string>
    <string name="defect_count_format_str">%1$s项</string>
    <string name="frequency_str">频率</string>
    <string name="all_time_str">时长</string>
    <string name="normal_temperature_str">正常对应点温度：</string>
    <string name="normal_str">正常</string>
    <string name="no_normal_str">异常</string>
    <string name="hours_str">(小时)：</string>
    <string name="times_title_str">次数</string>
    <string name="times_unit_str">(次)：</string>
    <string name="internal_resistance_str">内阻</string>
    <string name="voltage_unit_str">V</string>
    <string name="maintain_name_format_str">维护名称：</string>
    <string name="switch_name_format_str">试验名称：</string>
    <string name="resistance_unit_str">mΩ</string>
    <string name="resistance_munit_str">μΩ</string>
    <string name="humidity_unit_str">%RH</string>
    <string name="temperature_unit_str">°C</string>
    <string name="pre">上一个</string>
    <string name="next">下一个</string>
    <string name="test_temperature_str">测温范围</string>
    <string name="please_input_powerstation_voltage_str">选择全站或各电压等级</string>
    <string name="generate_question_str">生成问题</string>
    <string name="dialog_sure_str">确\t定</string>
    <string name="dialog_cancle_str">取\t消</string>
    <string name="dialog_tips_content_str">本次巡检还未完成，是否要结束巡检？</string>
    <string name="menu_unify">运维一体化</string>
    <string name="menu_operate">倒闸操作</string>
    <string name="menu_record">首页</string>
    <string name="menu_maintenance">设备维护</string>
    <string name="menu_tour">设备巡视</string>
</resources>