<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=""></data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/lancher_title"
            layout="@layout/launcher_include" />


        <View
            android:layout_width="match_parent"
            android:layout_height="40px"
            android:background="#f0f0f0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e0e0e0" />

        <com.cnksi.sjjc.View.NoScrollViewPager
            android:id="@+id/fragmen_pager"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e0e0e0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="75px"
            android:background="#f0f0f0" />

        <RelativeLayout
            android:id="@+id/main_radioGroupLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:id="@+id/main_line_textView"
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:layout_alignParentTop="true"
                android:background="#dfdfdf" />

            <RadioGroup
                android:id="@+id/main_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="165px"
                android:layout_gravity="left|bottom"
                android:background="@color/new_launcher_bottom_back"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10px"
                android:paddingTop="20px">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/menu_record"
                    style="@style/NewRadioButtonBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:clickable="true"
                    android:drawablePadding="20px"
                    android:drawableTop="@drawable/ic_hompage_selector"
                    android:text="@string/menu_record"
                    android:textSize="@dimen/txt_bottom32px" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/menu_tour"
                    style="@style/NewRadioButtonBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="20px"
                    android:drawableTop="@drawable/ic_tour_selector"
                    android:text="@string/menu_tour"
                    android:textSize="@dimen/txt_bottom32px" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/menu_maintenance"
                    style="@style/NewRadioButtonBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:drawablePadding="20px"
                    android:drawableTop="@drawable/ic_maintance_selector"
                    android:text="@string/menu_maintenance"
                    android:textSize="@dimen/txt_bottom32px" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/menu_operate"
                    style="@style/NewRadioButtonBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:drawablePadding="20px"
                    android:drawableTop="@drawable/ic_operater_selector"
                    android:text="@string/menu_operate"
                    android:textSize="@dimen/txt_bottom32px" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/menu_unify"
                    style="@style/NewRadioButtonBaseStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:drawablePadding="20px"
                    android:drawableTop="@drawable/ic_unify_selector"
                    android:text="@string/menu_unify"
                    android:textSize="@dimen/txt_bottom32px" />
            </RadioGroup>

        </RelativeLayout>
    </LinearLayout>
</layout>
