<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_record_defect_content_green_title_background"
    android:orientation="vertical" >

    <TextView
        android:background="@drawable/bdz_background_select"
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_strip_minheight_px"
        android:gravity="center"
        android:text="@string/tips_str"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_text_size_px" />

    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/tab_strip_minheight_px"
        android:padding="@dimen/global_padding_left_right_px"
        android:text="@string/dialog_tips_content_str"
        android:textColor="@color/deep_grey"
        android:textSize="@dimen/global_text_size_px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_eight_width_px"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_padding_top_bottom_px"
        android:layout_marginTop="@dimen/global_padding_top_bottom_px"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="360px"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/red_button_background_selector"
            android:gravity="center"
            android:text="@string/dialog_cancle_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/global_text_size_px" />

        <Button
            android:id="@+id/btn_sure"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="360px"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/grass_green_button_background_selector"
            android:gravity="center"
            android:text="@string/dialog_sure_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/global_text_size_px" />
    </LinearLayout>

</LinearLayout>