<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/ll_report_content_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/global_padding_top_bottom_px"
                  android:background="@mipmap/ic_report_background"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/global_padding_half_left_right_px"
                  android:paddingRight="@dimen/global_padding_half_left_right_px"
                  android:paddingTop="@dimen/report_padding_top_px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_padding_left_right_px"
            android:layout_marginRight="@dimen/global_padding_left_right_px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/work_start_time_str"
                android:textColor="@color/global_gray_text_color"
                android:textSize="@dimen/device_item_name_text_size_px"/>

            <TextView
                android:id="@+id/tv_inspection_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="left|center_vertical"
                android:textColor="@color/green_color"
                android:textSize="@dimen/global_text_size_px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_padding_left_right_px"
            android:layout_marginRight="@dimen/global_padding_left_right_px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/work_end_time_str"
                android:textColor="@color/global_gray_text_color"
                android:textSize="@dimen/device_item_name_text_size_px"/>

            <TextView
                android:id="@+id/tv_inspection_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="left|center_vertical"
                android:textColor="@color/green_color"
                android:textSize="@dimen/global_text_size_px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_padding_left_right_px"
            android:layout_marginRight="@dimen/global_padding_left_right_px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/work_persons_str"
                android:textColor="@color/global_gray_text_color"
                android:textSize="@dimen/device_item_name_text_size_px"/>

            <TextView
                android:id="@+id/tv_inspection_person"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="left|center_vertical"
                android:textColor="@color/green_color"
                android:textSize="@dimen/global_text_size_px"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_inspection_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/global_padding_left_right_px"
            android:layout_marginRight="@dimen/global_padding_left_right_px"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/work_check_type_str"
                android:textColor="@color/global_gray_text_color"
                android:textSize="@dimen/device_item_name_text_size_px"/>

            <TextView
                android:id="@+id/tv_inspection_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="left|center_vertical"
                android:textColor="@color/green_color"
                android:textSize="@dimen/global_text_size_px"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lltq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/global_padding_left_right_px"
                android:layout_marginRight="@dimen/global_padding_left_right_px"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/work_temperature_jcstr"
                    android:textColor="@color/global_gray_text_color"
                    android:textSize="@dimen/device_item_name_text_size_px"/>

                <TextView
                    android:id="@+id/tv_inspection_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/green_color"
                    android:textSize="@dimen/global_text_size_px"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/global_padding_left_right_px"
                android:layout_marginRight="@dimen/global_padding_left_right_px"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/work_humidity_jcstr"
                    android:textColor="@color/global_gray_text_color"
                    android:textSize="@dimen/device_item_name_text_size_px"/>

                <TextView
                    android:id="@+id/tv_inspection_humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/green_color"
                    android:textSize="@dimen/global_text_size_px"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/global_padding_left_right_px"
                android:layout_marginRight="@dimen/global_padding_left_right_px"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/work_weather_jcstr"
                    android:textColor="@color/global_gray_text_color"
                    android:textSize="@dimen/device_item_name_text_size_px"/>

                <TextView
                    android:id="@+id/tv_inspection_weather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/green_color"
                    android:textSize="@dimen/global_text_size_px"/>
            </LinearLayout>
        </LinearLayout>

        <com.cnksi.sjjc.view.DotView style="@style/DashStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/work_result_str"
            android:textColor="@color/global_text_color"
            android:textSize="@dimen/global_text_size_px"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_padding_left_right_px"
            android:background="@color/gray_background_color"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:minHeight="@dimen/inspection_result_minheight_px"
            android:orientation="vertical"
            android:paddingBottom="@dimen/global_padding_left_right_px"
            android:paddingTop="@dimen/global_padding_left_right_px">


            <TextView
                android:id="@+id/tv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/global_padding_left_right_px"
                android:gravity="left|center_vertical"
                android:text="@string/work_finish_check_str"
                android:textColor="@color/global_gray_text_color"
                android:textSize="@dimen/device_item_name_text_size_px"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_padding_left_right_px"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical|left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_inspection_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text="@string/work_finish_status_str"
                        android:textColor="@color/global_gray_text_color"
                        android:textSize="@dimen/device_item_name_text_size_px"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_padding_left_right_px"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_continue_inspection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/global_padding_left_right_px"
                        android:background="@drawable/red_button_background_selector"
                        android:clickable="true"
                        android:drawableLeft="@mipmap/ic_continue_inspection"
                        android:drawablePadding="@dimen/drawable_padding_px"
                        android:gravity="center"
                        android:paddingBottom="@dimen/text_button_padding_top_px"
                        android:paddingLeft="@dimen/text_button_padding_left_px"
                        android:paddingRight="@dimen/text_button_padding_left_px"
                        android:paddingTop="@dimen/text_button_padding_top_px"
                        android:text="@string/work_continue_str"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/device_item_name_text_size_px"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>